# FaceEnglish

./: CMakeLists.txt
headers/: Chapter.h  Console.h  Counter.h  English_Word.h  Hints.h  Polish_Word.h  Produkt.h  Word.h
src/: Chapter.cpp  Console.cpp  Counter.cpp  English_Word.cpp  Hints.cpp  Polish_Word.cpp  Produkt.cpp  Word.cpp  main.cpp
